modal z-index fix, route issue fix for multi category menu

--- a/components/com_spsimpleportfolio/assets/css/spsimpleportfolio.css
+++ b/components/com_spsimpleportfolio/assets/css/spsimpleportfolio.css
@@ -312,3 +312,8 @@
     width: 100%;
   }
 }
+
+/* Fixing popup z-index */
+.featherlight {
+  z-index: 9999;
+}
